--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,10 +1,21 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
-  <%= f.label :title %>
+  <%= f.label :title, 'Title'%>
   <%= f.text_field :title %>
-  <br />
-
+  <br / >
+  <%= f.label :artist_name, 'Artist Name' %>
+  <%= f.text_field :artist_name %>
+  <br />  
+  <%= f.label :genre_id, 'Select Genre' %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <br>
+  <%= f.fields_for :notes do |note_field| %>
+    <%= note_field.label :note %>
+    <%= note_field.text_area :content, rows:5, cols: 50 %>
+    <br>
+  <% end %>
+  <br>
   <%= f.submit %>
 <% end %>
 
